--- a/app/src/main/res/layout/activity_fragment_container.xml
+++ b/app/src/main/res/layout/activity_fragment_container.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/fragment_place"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical">
-    </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       >
+    </FrameLayout>
 </RelativeLayout>
