--- a/app/src/main/res/layout/fragment_sale_view_all.xml
+++ b/app/src/main/res/layout/fragment_sale_view_all.xml
@@ -12,33 +12,34 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp">
+            android:layout_height="50dp">
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:id="@+id/img_back"
+                    style="@style/ActionBarIcon"
+                android:id="@+id/back_button"
+                    android:onClick="goBack"
                 android:src="@mipmap/btn_back_arrow"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="0dp"
                 android:layout_centerVertical="true" />
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                    style="@style/ActionBarIcon"
                 android:id="@+id/img_plus"
                 android:src="@mipmap/plus_thin"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="15dp" />
+                    android:visibility="gone"
+                android:layout_marginRight="5dp" />
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                style="@style/ActionBarIcon"
                 android:id="@+id/img_filter"
+                android:onClick="onClick"
                 android:src="@mipmap/ic_filter_map"
                 android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
                 android:layout_toLeftOf="@+id/img_plus"
-                android:layout_marginRight="10dp" />
+                android:layout_marginRight="5dp" />
 
             <TextView
                 android:layout_width="150dp"
@@ -48,6 +49,7 @@
                 style="@style/EditTextStyle"
                 android:textStyle="bold"
                 android:textSize="20dp"
+                android:id="@+id/title"
                 android:textColor="@color/white"
                 android:gravity="center_vertical|center_horizontal" />
         </RelativeLayout>
@@ -55,8 +57,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$1,500.54"
-            android:id="@+id/textView10"
+            android:text="$0.00"
+            android:id="@+id/totalSales"
             style="@style/EditTextStyle"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -67,10 +69,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="All time sales"
-            android:id="@+id/textView11"
+            android:id="@+id/totalSalesLable"
             android:textColor="@color/white"
             android:textSize="15dp"
             style="@style/EditTextStyle"
+
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
