--- a/app/src/main/res/layout/schedule_select_client_list_general.xml
+++ b/app/src/main/res/layout/schedule_select_client_list_general.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+                android:background="@drawable/background_green"
     android:orientation="vertical">
 
     <LinearLayout
@@ -14,7 +14,6 @@
         android:orientation="vertical">
         <RelativeLayout
                 android:id="@+id/top_layout"
-                android:background="@drawable/background_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/action_bar_height">
             <TextView
@@ -23,7 +22,7 @@
                     android:layout_centerInParent="true"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="0dp"
-                    android:text="Select Client"
+                    android:text="Select..."
                     android:textColor="@color/white"
                     android:textSize="15sp" />
 
@@ -86,6 +85,7 @@
             <View android:layout_width="0dp" android:layout_height="0dp" android:focusable="true"
                   android:id="@+id/getFocus" ></View>
             <EditText
+                    android:visibility="invisible"
                 android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -103,6 +103,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/upper_layout"
         android:layout_alignParentBottom="true"
+        android:background="@android:color/white"
         android:orientation="vertical">
 
         <ListView
