--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
     <color name="indigo">#3F51B5</color>
     <color name="blue">#3c96ff</color>
     <color name="grey">#32323a</color>
-    <color name="light_gray">#DAE1E4</color>
+    <color name="light_gray">#dae1e4</color>
     <color name="light_gray2">#bbbbbb</color>
     <color name="drawer_background">#203049</color>
 
