--- a/app/src/main/res/layout/activity_invite_coworker.xml
+++ b/app/src/main/res/layout/activity_invite_coworker.xml
@@ -2,27 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:background="@color/schedule_title_bg_color">
+        android:layout_height="54dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Co-Workers"
+            android:text="ADD A COLLEAGUE"
             android:textColor="@color/white"
             android:textSize="17sp"
             android:textStyle="bold"
             android:id="@+id/textView5"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/back_layout"
-            android:layout_marginStart="29dp" />
+            android:layout_marginStart="29dp"
+            android:layout_centerInParent="true" />
 
         <LinearLayout
             android:onClick="onClick"
@@ -32,71 +30,116 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img_close"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/action_bar_icon_height"
+                android:layout_height="@dimen/action_bar_icon_height"
                 android:layout_centerVertical="true"
-                android:src="@mipmap/btn_back_arrow" />
-
-            <TextView
-                android:id="@+id/txt_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close"
-                android:text="@string/str_back"
-                android:textColor="@color/white"
-                android:textSize="17sp" />
+                android:src="@mipmap/btn_back_arrow"
+                android:padding="@dimen/action_bar_icon_padding" />
 
         </LinearLayout>
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/white"
+        android:gravity="center_horizontal">
 
-        <EditText
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:textSize="20sp"
-            android:id="@+id/email"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="155dp"
-            android:text="nondefyde@gmail.co"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_above="@+id/invite"
-            android:layout_alignParentEnd="true" />
+            android:text="Invite your colleagues"
+            android:id="@+id/textView28"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:paddingTop="25dp"
+            android:paddingBottom="25dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:id="@+id/imageView21"
+            android:src="@mipmap/recall"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="invite via email address"
+            android:id="@+id/textView29"
+            android:textColor="@color/blue"
+            android:textSize="14sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"
+            android:layout_marginTop="15dp" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/recall"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="invite via SMS"
+            android:id="@+id/txt_sms"
+            android:textColor="@color/blue"
+            android:textSize="14sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"
+            android:layout_marginTop="15dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Enter email"
-            android:textColor="@android:color/black"
+            android:text="*You can import multiple employees via EXCEL using the website. Learn More >"
+            android:textColor="@color/grey"
             android:id="@+id/text"
-            android:textSize="30sp"
+            android:textSize="15sp"
             android:layout_alignBottom="@+id/email"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="80dp" />
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_marginTop="50dp" />
 
-        <Button
-            android:onClick="onClick"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"
+            android:layout_marginTop="20dp" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Invite"
-            android:id="@+id/invite"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true" />
+            android:text="ADD LATER"
+            android:id="@+id/textView30"
+            android:textSize="18sp"
+            android:textColor="@color/grey"
+            android:layout_marginTop="25dp" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
