--- a/app/src/main/res/layout/activity_profile_notifications.xml
+++ b/app/src/main/res/layout/activity_profile_notifications.xml
@@ -2,21 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:background="@drawable/background_layout">
+        android:layout_height="54dp">
 
         <ImageView
             android:id="@+id/img_close"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="@dimen/action_bar_icon_height"
+            android:layout_height="@dimen/action_bar_icon_height"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/btn_close" />
+            android:src="@mipmap/btn_back_arrow"
+            android:padding="@dimen/action_bar_icon_padding" />
 
         <TextView
             android:id="@+id/txt_title"
@@ -32,9 +31,10 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@+id/continue_btn"
-        android:layout_below="@+id/top_layout">
+        android:layout_below="@+id/top_layout"
+        android:background="@color/white">
 
 
         <LinearLayout
