--- a/app/src/main/res/layout/profile3.xml
+++ b/app/src/main/res/layout/profile3.xml
@@ -22,8 +22,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:text="OVERALL SALES THIS MONTH"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:id="@+id/llSales"
