--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.tied.android.tiedapp.ui.activities.ProfileActivity">
+    tools:context=".ui.fragments.profile.ProfileFragment">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
