--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/background_blue"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -32,6 +32,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:onClick="onClick"
                 android:id="@+id/img_close"
                 android:layout_width="@dimen/action_bar_icon_height"
                 android:layout_height="@dimen/action_bar_icon_height"
@@ -51,6 +52,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:onClick="onClick"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/action_bar_icon_height"
                 android:layout_centerVertical="true"
