--- a/app/src/main/res/layout/dialog_select_picture_new.xml
+++ b/app/src/main/res/layout/dialog_select_picture_new.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent"
+    android:orientation="vertical">
 
-    <LinearLayout
+<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/atvCancel"
@@ -71,4 +73,5 @@
         android:text="CANCEL"
         android:textAllCaps="false"
         android:textColor="@color/red_color" />
-</RelativeLayout>
+
+</LinearLayout>
