--- a/app/src/main/res/layout/fragment_view_client.xml
+++ b/app/src/main/res/layout/fragment_view_client.xml
@@ -11,7 +11,7 @@
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:background="@drawable/background">
+        android:background="@drawable/background_blue">
 
         <TextView
             android:id="@+id/client_name"
