--- a/app/src/main/res/layout/main_activity_drawer_header.xml
+++ b/app/src/main/res/layout/main_activity_drawer_header.xml
@@ -11,11 +11,11 @@
 
 
         <RelativeLayout
+                android:id="@+id/profile_menu"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:background="@color/drawer_background"
                 android:layout_marginTop="0dp"
-
                 android:layout_marginBottom="0dp"
                 android:layout_height="100dp">
 
