--- a/app/src/main/res/layout/activity_coworker_view.xml
+++ b/app/src/main/res/layout/activity_coworker_view.xml
@@ -278,10 +278,10 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:orientation="horizontal"
-            android:weightSum="2"
+            android:weightSum="1"
             android:layout_weight="1">
 
-            <LinearLayout
+            <!-- <LinearLayout
                 android:id="@+id/goals"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -323,7 +323,7 @@
                 android:layout_width="0.1dp"
                 android:layout_height="match_parent"
                 android:background="@color/light_gray" />
-
+-->
             <LinearLayout
                 android:id="@+id/schedules"
                 android:layout_width="0dp"
