--- a/app/src/main/res/layout/activity_territory.xml
+++ b/app/src/main/res/layout/activity_territory.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_blue">
+              android:id="@+id/main_layout"
+   >
 
     <RelativeLayout
         android:id="@+id/top_layout"
@@ -92,7 +93,18 @@
                 android:layout_marginTop="5dp" />
         </LinearLayout>
     </LinearLayout>
-
+    <TextView android:layout_width="wrap_content"
+              android:gravity="center"
+              android:layout_gravity="center"
+              android:text="No lines found"
+              android:layout_margin="30dp"
+              android:background="@drawable/white_fill_grey_stroke"
+              android:padding="20dp"
+              android:textSize="15sp"
+              android:visibility="gone"
+              android:textColor="@color/light_gray"
+              android:id="@+id/no_results"
+              android:layout_height="wrap_content"/>
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
