--- a/app/src/main/res/layout/client_lines_fragment.xml
+++ b/app/src/main/res/layout/client_lines_fragment.xml
@@ -29,7 +29,18 @@
             android:hint="Search Client by Name"/>
 
     </RelativeLayout>
-
+    <TextView android:layout_width="wrap_content"
+              android:gravity="center"
+              android:layout_gravity="center"
+              android:text="No clients found"
+              android:layout_margin="30dp"
+              android:background="@drawable/white_fill_grey_stroke"
+              android:padding="20dp"
+              android:textSize="15sp"
+              android:visibility="gone"
+              android:textColor="@color/light_gray"
+              android:id="@+id/no_results"
+              android:layout_height="wrap_content"/>
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
